<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:background="@drawable/bg_white_corner_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/low_permission"
        android:textStyle="bold"
        android:textColor="@color/darkHeavy"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/grant_these_permissions_to_use"
        android:textColor="@color/darkHeavy"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:fontFamily="@font/urbanist_medium"
        android:textStyle="bold"
        android:text="@string/low_lie_detector"
        android:textColor="@color/darkHeavy"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/note_you_can_also_grant_permission_in"
        android:textColor="@color/darkHeavy"
        android:textSize="16sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:fontFamily="@font/urbanist_medium"
        android:textStyle="bold"
        android:text="@string/setting_app_lie_detector"
        android:textColor="@color/darkHeavy"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:fontFamily="@font/urbanist_medium"
        android:textStyle="bold"
        android:text="@string/low_permission"
        android:textColor="@color/darkHeavy"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel_guild"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_graylight_corner_8"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_ok_guild"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_blued_corner_8"
            android:gravity="center"
            android:fontFamily="@font/urbanist_medium"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>