<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".activity.LanguageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:fontFamily="@font/druk_text_wide_medium_trial"
        android:text="@string/permission"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cabinet_grotesk_medium"
        android:text="@string/permission_text"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_darklight_corner_8"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cabinet_grotesk_medium"
            android:text="@string/microphone_access"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/swich_micro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:thumbTint="@color/switch_thumb"
            android:trackTint="@color/switch_track"
            tools:targetApi="m"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_darklight_corner_8"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cabinet_grotesk_medium"
            android:text="@string/camera_access"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/swich_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:thumbTint="@color/switch_thumb"
            android:trackTint="@color/switch_track"
            tools:targetApi="m"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>
    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cabinet_grotesk_medium"
        android:text="@string/continue_text"
        android:textColor="#03D8DA"
        android:textSize="24sp" />

</LinearLayout>