<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/bg_white_corner_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/stop_scan"
        android:textStyle="bold"
        android:textColor="#121212"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/are_you_sure_you_want_to_stop_the_scanning_progress"
        android:textColor="@color/darkHeavy"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_stop_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_redlight_corner_8"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/urbanist_medium"
            android:text="Stop"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_continue_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_blued_corner_8"
            android:gravity="center"
            android:fontFamily="@font/urbanist_medium"
            android:padding="10dp"
            android:text="@string/continue1"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>