<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="99dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="90dp"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_splash_true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:fontFamily="@font/druk_text_wide_medium_trial"
                    android:text="@string/truth"
                    android:textColor="#00ef8d"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="18dp"
                    android:src="@drawable/img_splash_light_true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_splash_eclipse_truth" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="90dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_splash_lie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/liee"
                    android:fontFamily="@font/druk_text_wide_medium_trial"
                    android:text="@string/lie"
                    android:textColor="#FF3232"
                    android:textSize="21sp" />

                <ImageView
                    android:id="@+id/liee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/img_splash_light_lie" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_splash_eclipse_lie" />


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="276dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_splash_wave" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="182dp"
        android:adjustViewBounds="true"
        android:contentDescription="TODO"
        android:src="@drawable/img_splash_call" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/img_splash_light1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/layout_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout2">

            <ImageView
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/img_splash_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/lie_detector1"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/text_splash"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="85dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="293dp"
                android:layout_height="4dp"
                android:indeterminate="true"
                app:indicatorColor="#25FDFF"
                app:trackColor="@color/black" />

            <TextView
                android:id="@+id/tv_about_us_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center"
                android:text="@string/this_action_may_contain_advertising"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/rlBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="bottom">

        <include
            android:id="@+id/banner"
            layout="@layout/layout_banner_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" />
    </RelativeLayout>


</FrameLayout>